# MiNT

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  README.md  bochsrc.txt  build.sh  configure.sh  run.sh
boot/: CMakeLists.txt  boot_images.cmake  mintldr_sources.cmake
boot/arch/x86_64/: bootstub.asm  graphics.c  io.c  ldr.c  link.ld  main.c  mm.c  serial.c
boot/include/: bugcheck.h  dbg.h  multiboot.h  ui.h
boot/include/arch/: graphics.h  serial.h
boot/include/arch/x86_64/: io.h  main.h  mm.h  serial.h
boot/include/ldr/: ldr.h
boot/include/minilibc/: stdlib.h  string.h
boot/include/mm/: heap.h  mm.h  region.h
boot/ldr/: ldr.c  parameter.c
boot/minilibc/: stdlib.c  string.c
boot/mintldr/: CMakeLists.txt
boot/mintldr/bootsect/: CMakeLists.txt  cdboot.S  cdldr.S  fat.S  fat.asm
boot/mintldr/mintldr/: CMakeLists.txt  mintldr.c  mintldr.cmake  mintldr.ld
boot/mintldr/mintldr/arch/i386/: bios32.S  entry.S  gfx.c  idt.S  idt.c  irq.c  tinyhal.c
boot/mintldr/mintldr/arch/i386/mach/: mach.c  memory.c  serial.c
boot/mintldr/mintldr/include/: dbg.h  gfx.h  mintldr.h
boot/mintldr/mintldr/include/arch/: mach.h
boot/mintldr/mintldr/include/arch/i386/: gfx.h  hal.h  i386.h  irq.h  mach.h
boot/mintldr/mintldr/include/minilib/: string.h
boot/mintldr/mintldr/include/ui/: ui.h
boot/mintldr/mintldr/minilib/: string.c
boot/mintldr/mintldr/realmode/: README.txt  a20.inc  bios32.inc  gdt.inc  i386.S
boot/mintldr/mintldr/ui/: ui.c  ui_print.c
boot/mm/: heap.c  pmm.c  vmm.c
boot/ui/: bugcheck.c  ui.c
cmake/: CMakeMacros.cmake  bootsect.cmake  build_config.cmake  cds.cmake  cross_compile.cmake  detect_arch.cmake  init-sections.lds  iso.cmake  macros.cmake
cmake/arch/i386/: toolchain-i386.cmake
cmake/arch/x86_64/: toolchain.cmake
dll/: CMakeLists.txt
dll/hal/: CMakeLists.txt
dll/hal/x86/: CMakeLists.txt  hal_main.c
dll/hal/x86/generic/: port.c
dll/hal/x86/include/: hal.h
dll/hal/x86_64/: CMakeLists.txt  hal_main.c  hal_sources.cmake
dll/hal/x86_64/generic/: io.c
dll/kdcom/: CMakeLists.txt  kdcom.c
include/libraries/libc/: stdarg.h  stddef.h  stdint.h  stdio.h
include/libraries/serial/: serial.h
include/mint/: HeaderBase.h  Int64.h  arc.h  basetsd.h  bugcodes.h  hal.h  kddll.h  ke.h  ketypes.h  minwindef.h  msvctarget.h  ntbasedef.h  ntdef.h  ntdef_types.h  ntstatus.h  rtl.h  sal.h  vadefs.h  windbgkd.h  windef.h  winnt.h
include/mint/ddk/: ioaccess.h  ntimage.h
include/mint/hardware/: hardware.h
include/mint/hardware/x86_64/: asm.h  x86_64.h
lib/: CMakeLists.txt
lib/libc/: CMakeLists.txt  libc_sources.cmake
lib/libc/stdio/: printf.c
lib/serial/: CMakeLists.txt  serial.c
libraries/: CMakeLists.txt
libraries/cportlib/: CMakeLists.txt  cport.c
libraries/hal/x86/: CMakeLists.txt  hal_main.c  halsource.cmake
libraries/hal/x86/generic/: port.c
libraries/kdcom/: CMakeLists.txt  kdcom.c
minbuild/: README.md
mint/include/asm/: CMakeLists.txt  asm.inc  asm_nasm.inc  pecommon.h
mint/include/asm/reactos/: README.txt  asm_reactos_compatible.inc  x86common.h
mint/include/host/reactos/: dbghelp_compat.h  guiddef.h  pecoff.h  poppack.h  pshpack4.h  typedefs.h
mint/include/host/wine/: unicode.h
mint/include/libraries/cportlib/: cport.h
mint/include/mint/: BaseTsd.h  Ddeml.h  Int64.h  IntSafe.h  Sal.h  ShellApi.h  WinDef.h  WinNT.h  WinNls.h  WinSvc.h  WinUser.h  Winternl.h  basetsd.h  intsafe.h  kddbg.h  kddll.h  mintdefs.h  msvctarget.h  ntbasedef.h  vadefs.h  windef.h
mint/include/mint/arc/: arc.h
mint/include/mint/ddk/: wdm.h
mint/include/mint/hardware/i386/: serial.h
mint/include/mint/ndk/arch/i386/: ke.h
mint/include/mint/psdk/: ntstatus.h  winerror.h
mint/include/mint/xdk/: iofuncs.h  ketypes.h  ntdef.h
mintkrnl/: CMakeLists.txt  krnlsrc.cmake  mintkrnl_sources.cmake
mintkrnl/ke/: bugcheck.c
mintkrnl/ke/x86_64/: except.c  trap.S
mintkrnl/ki/arch/i386/: ki_init.c
mintkrnl/ki/arch/x86_64/: boot.S  init.c
tools/: CMakeLists.txt  README.md
tools/hpp/: hpp.c
tools/obj2bin/: obj2bin.c
tools/pefixup/: pefixup.c
util/: generate_iso.py
